nock and real-nock are now imported (previously: given as arguments).

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "homepage": "https://github.com/wix/nockable",
   "dependencies": {
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "nock": "^9.0.13",
+    "real-nock": "^1.0.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
