--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "babel-register": "^6.8.0",
     "babel-runtime": "^6.6.1",
     "chai": "^2.2.0",
-    "mocha": "^2.2.1"
+    "mocha": "^2.2.1",
+    "axios": "^0.16.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
